# beaconsfield-desktop

./: .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  pyproject.toml
beaconsfield/: beaconsfield.py  model.py  reddit.py  storage.py  sys.py
