[tool.poetry]
name = "beaconsfield"
version = "1.0.0"
description = "Automatic wallpaper picker"
authors = ["Donald AC Martin"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pre-commit = "^2.13"
pylint = "^2.9"
pytest = "^6.2"
pytest-cov = "^2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
